[package]
name = "pdbtbx-ts"
version = "0.1.4"
authors = ["Stefan Verhoeven <s.verhoeven@esciencecenter.nl>"]
edition = "2021"
description = "Typescript wrapper around pdbtbx"
license = "Apache-2.0"
repository = "https://github.com/i-VRESSE/pdbtbx-ts"
keywords = ["pdb", "mmcif", "parse"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
pdbtbx = "0.9.1"
wasm-bindgen = "0.2.80"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.30"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
